[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rex/"]

[project]
name = "rex-password-manager"
version = "3.7.9"
readme = "README.md"
requires-python = ">=3.0"
license = {file = "LICENSE"}
authors = [{name = "Nithin", email = "cromizonebolt@gmail.com"}]
description = "A powerful terminal password manager using AES encryption and python"
keywords = ["terminal", "password", "passphrase", "AES encryption", "python", "typer", "password manager"]
dependencies = ["bcrypt==4.0.1", "pycryptodome==3.20.0", "pydantic==2.5.3", "typer==0.9.0", "rich==13.7.0", "pyperclip==1.8.2"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]

[project.scripts]
rex = "rex:cli"

[project.urls]
Homepage = "https://github.com/Cromizone/rex"
Issues = "https://github.com/Cromizone/rex/issues"
